# murphet

./: .gitignore  README.md  project.toml  pyproject.toml  setup.py
.github/workflows/: python-app.yml
data/: RETAILIRNSA.csv
docs/: advanced_usage.md  index.md  optuna_recipes.md  quickstart.md  stan_reference.md
examples/: H0RIFSPPCM06NM_comparison.py  Hotel_occupancy.ipynb  Test_Churn_Rate.ipynb  UNRATE_compare.ipynb  optuna_retail_murphet_vs_prophet.py
examples/data/: H0RIFSPPCM06NM.csv  hotel_room_occupancy_rate_monthly_by_cat_en.csv  synthetic_churn_rates.csv
murphet/: __init__.py  churn_model.py  improved_model_parallel.stan
src/murphet/: churn_model.py  churn_model_parallel.py  improved_model.stan  murphet_beta.stan  murphet_gauss.stan  murphet_model.stan
tests/: bike_rentals_compare.py  bike_test.py  churn_test.py  compare_and_plot.py  compare_murphet_prophet.py  optuna_retailIR_murphet_vs_prophet.py  tuned_parameters_compare.py
